# IMU-Parkinson

./: .gitignore  .paper_final.txt  .paper_r2.txt  .paper_r3.txt  .paper_text_for_review.txt  AGENTS.md  CALIB-EXPERIMENTS.md  CLAUDE.md  CODEX-PROPOSALS.md  CONT.md  CURRENT_PAPER.html  EXP-SUMMARY.md  EXP.md  FIXES.md  HOW.md  LEARNINGS.md  NEW-BAK.html  NEW.html  NEW5.html  NEW6.html  NEXTNEXT.md  PARKINSON_FOUNDATION_MODEL_9B_PIPELINE.md  PROPOSALS.md  README.md  REPRODUCIBILITY.md  SWARM_PLAN.json  SWARM_PLAN.md  VNEXT.md  add_pipeline_section.py  aggregate_proresults_ablation.py  all_tables.txt  ampersand_check.py  analyze_combined_t3_lift.py  audit_ablation_v3_regeneration.py  audit_access_lifecycle_state_handoff.py  audit_access_submission_tracker.py  audit_architecture_recommendation.py  audit_artifact_ledger_contract.py  audit_cache_backfill_candidates.py  audit_cache_backfill_decisions.py  (+480 more)
.paper_build/: context_summary.md  external_codex_writing.md  external_gemini_writing.md  methods_summary.md  narrative_alignment.md  paper_text.txt  results_summary.md  review_cycle3.md
.skill_design/: brief.md  gemini_review.md  kimi_review.md
.swarm/: .plan-write-marker  checkpoints.json  context.md  curator-briefing.md  dark-matter.md  doc-manifest.json  events.jsonl  knowledge.jsonl  plan-ledger.jsonl  plan.json  plan.md  repo-graph.json  spec.md  swarm.db-shm  swarm.db-wal  telemetry.jsonl
pd_imu/: __init__.py
results/: ablation_results.json  ablation_v2_results.json  ablation_v3_cache_provenance_audit_20260508.json  ablation_v3_cache_provenance_audit_20260508.md  (+1818 more)
(+418 files in other folders)
